<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feed_app_name">Discover</string>
    <string name="feed_comment_title">Comments</string>
    <string name="feed_comment_hint">Leave your brilliant comment</string>
    <string name="feed_comment_send">Send</string>
    <string name="feed_no_more">No more</string>
    <string name="feed_loading">Loading...</string>
    <string name="feed_retry">Failed to load, tap to retry</string>
    <string name="feed_say_hello">Say hello</string>
    <string name="feed_send_message">Send message</string>
    <string name="feed_following_friend">Friend</string>
    <string name="feed_distance_within">Within %1$d km</string>
    <string name="feed_active_online">Online</string>
    <string name="feed_active_minutes">Active %1$d minutes ago</string>
    <string name="feed_image_indicator">%1$d/%2$d</string>
    <string name="feed_video_type">Video</string>
    <string name="feed_multi_image_type">Multiple images</string>
    <string name="feed_comment_reply">Reply</string>
    <string name="feed_comment_sending">Sending...</string>
    <string name="feed_comment_failed">Failed to send, tap to retry</string>
    <string name="feed_comment_expand_replies">Expand %1$d replies</string>
    <string name="feed_comment_title_count">%1$d comments</string>
    <string name="feed_comment_reply_to">Reply to %1$s</string>
    <string name="feed_comment_me">Me</string>
    <string name="feed_empty_posts">No posts yet</string>
    <string name="feed_publish_title">New Post</string>
    <string name="feed_publish_desc">Images will be compressed to WebP (~100KB target); videos will be compressed on device to MP4/H.264, default portrait ~540×960, and can be disabled with a switch when live.</string>
    <string name="feed_close">Close</string>
    <string name="feed_action_unavailable">This action is currently unavailable</string>
    <string name="feed_hello_sent">Greeting sent</string>
    <string name="feed_publish_text_hint">Say something...</string>
    <string name="feed_pick_images">Select images</string>
    <string name="feed_pick_video">Select video</string>
    <string name="feed_publish_submit">Post</string>
    <string name="feed_publish_hint_video_on">Select up to %1$d images at a time; images compressed to WebP ~100KB. Video will be compressed on device before upload, recommended within 60s.</string>
    <string name="feed_publish_hint_video_off">Select up to %1$d images at a time; images compressed to WebP ~100KB. Video upload is disabled, can be enabled in FeedConfig.</string>
    <string name="feed_publish_image_disabled">Image upload is disabled</string>
    <string name="feed_publish_video_disabled">Video upload is disabled</string>
    <string name="feed_publish_max_images">Maximum %1$d images can be selected</string>
    <string name="feed_publish_video_selected">Video selected: %1$s</string>
    <string name="feed_publish_select_media">Please select an image or video</string>
    <string name="feed_publish_wait_upload">Uploading, please wait</string>
    <string name="feed_publish_preparing">Preparing upload...</string>
    <string name="feed_publish_compressing_image">Compressing image...</string>
    <string name="feed_publish_preparing_video">Processing video...</string>
    <string name="feed_publish_compressing_video">Compressing video...</string>
    <string name="feed_publish_uploading">Uploading...</string>
    <string name="feed_publish_uploading_percent">Uploading %1$d%%</string>
    <string name="feed_publish_saving">Posting...</string>
    <string name="feed_publish_success">Published successfully</string>
    <string name="feed_publish_failed">Publish failed</string>
    <string name="feed_publish_file_missing">File not found</string>
    <string name="feed_publish_upload_url_failed">Failed to get upload URL</string>
    <string name="feed_publish_upload_failed">Upload failed</string>
    <string name="feed_publish_upload_timeout">Upload timed out</string>
    <string name="feed_tab_recommend">Recommended</string>
    <string name="feed_tab_following">Following</string>
    <string name="feed_follow">Follow</string>
    <string name="feed_followed">Following</string>
    <string name="feed_share">Share</string>
    <string name="feed_share_to_friend">Share to friend</string>
    <string name="feed_copy_link">Copy link</string>
    <string name="feed_link_copied">Link copied</string>
    <string name="feed_report">Report</string>
    <string name="feed_report_received">Report received</string>
    <string name="feed_publish_text_limit">Maximum 280 characters</string>
    <string name="feed_following_not_ready">Following feed will be available after the backend is connected</string>
    <string name="feed_publish_storage_hint">To save space, videos are automatically deleted after 28 days. Images and videos are compressed on device before upload.</string>
    <string name="feed_delete">Delete post</string>
    <string name="feed_delete_requested">Delete request submitted</string>
    <string name="feed_delete_not_ready">Delete API will be available after backend integration</string>
</resources>
